--- a/index.html
+++ b/index.html
@@ -1,314 +1,3 @@
-<!DOCTYPE html> 
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <title>K.ARTS ログイン</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f3f4f6;
-      color: #111827;
-    }
-    #app {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 16px 10px 32px;
-    }
-    .screen { display: none; }
-    .screen.active { display: block; }
-
-    .brand {
-      text-align: center;
-      font-size: 44px;
-      letter-spacing: 0.2em;
-      margin: 12px 0 6px;
-    }
-    .subtitle {
-      text-align: center;
-      font-size: 15px;
-      color: #4b5563;
-      margin-bottom: 20px;
-      line-height: 1.6;
-    }
-
-    #login-form {
-      max-width: 480px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      font-size: 16px;
-    }
-
-    label { font-weight: 600; margin-bottom: 4px; }
-
-    input[type="text"],
-    input[type="password"],
-    input[type="number"],
-    textarea {
-      width: 100%;
-      padding: 10px 12px;
-      font-size: 18px;
-      border-radius: 8px;
-      border: 1px solid #d1d5db;
-      outline: none;
-      background: #ffffff;
-    }
-    input:focus,
-    textarea:focus {
-      border-color: #2563eb;
-      box-shadow: 0 0 0 1px #2563eb20;
-    }
-
-    textarea { resize: vertical; }
-
-    .btn {
-      border: none;
-      border-radius: 999px;
-      padding: 10px 18px;
-      font-size: 18px;
-      font-weight: 600;
-      cursor: pointer;
-    }
-    .btn.primary { background: #2563eb; color: #ffffff; }
-    .btn.primary:hover { opacity: 0.9; }
-    .btn.secondary { background: #e5e7eb; color: #111827; }
-    .btn.secondary:hover { background: #d1d5db; }
-    .btn.small { font-size: 14px; padding: 6px 12px; }
-    .btn.wide { width: 100%; }
-    .btn.danger { background: #dc2626; color: #fff; }
-
-    .error-message { color: #b91c1c; min-height: 1.2em; }
-    .info-message { color: #047857; min-height: 1.2em; font-size: 14px; margin-top: 8px; }
-
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 12px;
-      margin-bottom: 16px;
-      flex-wrap: wrap;
-    }
-
-    .card {
-      background: #ffffff;
-      border-radius: 16px;
-      padding: 14px 14px 16px;
-      margin-bottom: 14px;
-      box-shadow: 0 4px 12px #0000000a;
-    }
-
-    .image-area {
-      border-radius: 16px;
-      border: 1px dashed #d1d5db;
-      background: #f9fafb;
-      padding: 12px;
-      min-height: 160px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 12px;
-    }
-    .art-image {
-      max-width: 100%;
-      max-height: 280px;
-      border-radius: 12px;
-    }
-    .image-placeholder {
-      color: #9ca3af;
-      text-align: center;
-      padding: 24px 8px;
-    }
-    .hidden { display: none; }
-
-    .file-label {
-      display: inline-block;
-      margin-top: 4px;
-      padding: 8px 14px;
-      border-radius: 999px;
-      border: 1px solid #9ca3af;
-      font-size: 14px;
-      cursor: pointer;
-    }
-    .file-label input { display: none; }
-
-    .char-counter {
-      text-align: right;
-      font-size: 12px;
-      color: #6b7280;
-      margin-top: 4px;
-    }
-
-    /* ▼ トップページの「みんなの作品」用 ▼ */
-    .featured-section {
-      max-width: 900px;
-      margin: 32px auto 0;
-    }
-    .featured-title {
-      font-size: 18px;
-      font-weight: 700;
-      margin: 0 0 4px;
-      text-align: center;
-    }
-    .featured-desc {
-      font-size: 13px;
-      color: #6b7280;
-      margin: 0 0 12px;
-      text-align: center;
-    }
-    .featured-grid {
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 16px;
-    }
-    .featured-item {
-      background: #ffffff;
-      border-radius: 16px;
-      padding: 10px 10px 12px;
-      box-shadow: 0 4px 12px #0000000a;
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-    }
-    .featured-img-wrap {
-      border-radius: 12px;
-      overflow: hidden;
-      background: #f9fafb;
-      min-height: 120px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .featured-img {
-      max-width: 100%;
-      max-height: 220px;
-      display: block;
-    }
-    .featured-placeholder {
-      color: #9ca3af;
-      font-size: 13px;
-      padding: 16px 8px;
-      text-align: center;
-    }
-    .featured-comment {
-      font-size: 13px;
-      line-height: 1.5;
-      min-height: 3em;
-      white-space: pre-wrap;
-    }
-    .featured-code {
-      font-size: 11px;
-      color: #6b7280;
-      text-align: right;
-    }
-
-    @media (max-width: 640px) {
-      #app { padding: 12px 10px 24px; }
-      .brand { font-size: 34px; }
-      .subtitle { font-size: 14px; }
-      .btn { font-size: 16px; }
-      .featured-grid {
-        grid-template-columns: 1fr; /* スマホでは1列×最大8行表示 */
-      }
-    }
-  </style>
-</head>
-
-<body>
-  <div id="app">
-
-    <!-- ▼▼▼ ログイン画面 ▼▼▼ -->
-    <section id="login-screen" class="screen active">
-      <h1 class="brand">K.ARTS</h1>
-      <p class="subtitle">
-        缶ケースに書いてあるログインコードを入力してください<br>
-        例） B00001
-      </p>
-
-      <form id="login-form">
-        <!-- ログインコード -->
-        <label for="login-code">ログインコード（アルファベット1文字 + 5桁数字）</label>
-        <input
-          type="text"
-          id="login-code"
-          maxlength="6"
-          placeholder="B00001 など"
-          autocomplete="off"
-          required
-        />
-
-        <!-- M / E / B 用パスワード欄（Bは個別設定） -->
-        <label for="login-password">パスワード</label>
-        <input
-          type="password"
-          id="login-password"
-          maxlength="4"
-          placeholder=""
-          autocomplete="off"
-        />
-
-        <button type="submit" class="btn primary">ログイン</button>
-        <p id="login-error" class="error-message"></p>
-      </form>
-
-      <!-- ▼ みんなの作品（M だけ・最大8枚） ▼ -->
-      <section class="featured-section">
-        <h2 class="featured-title">みんなの作品</h2>
-        <p class="featured-desc">
-          これまでに作られたアート作品の一部です。
-        </p>
-        <div id="featured-container"></div>
-      </section>
-    </section>
-
-    <!-- ▼▼▼ M / B 作品画面 ▼▼▼ -->
-    <section id="art-screen" class="screen">
-      <header class="top-bar">
-        <h2 id="art-title"></h2>
-        <button id="logout-art" class="btn secondary small">ログアウト</button>
-      </header>
-
-      <div class="card">
-        <h3>作品の写真</h3>
-
-        <div class="image-area">
-          <img id="art-image-preview" class="art-image hidden" />
-          <div id="art-image-placeholder" class="image-placeholder">
-            まだ画像が登録されていません
-          </div>
-        </div>
-
-        <label class="file-label">
-          画像ファイルを選択
-          <input type="file" id="art-image-input" accept="image/*" />
-        </label>
-
-        <div style="margin-top: 8px; display:flex; gap:8px; flex-wrap:wrap;">
-          <button id="delete-image" class="btn danger small">画像を削除する</button>
-          <!-- ★ M の人専用：トップページに入れ替えるボタン -->
-          <button id="feature-art" class="btn secondary small hidden">
-            入れ替える
-          </button>
-        </div>
-      </div>
-
-      <div class="card">
-        <h3>作品への思い（0〜300文字）</h3>
-        <textarea id="art-comment" rows="5" maxlength="300"></textarea>
-        <div class="char-counter">
-          <span id="art-comment-count">0</span>/300 文字
-        </div>
-      </div>
-
-      <div class="card">
-        <button id="save-art" class="btn primary wide">作品を保存する</button>
-        <p id="art-save-message" class="info-message"></p>
-      </div>
-    </section>
-
     <!-- ▼▼▼ E 管理画面 ▼▼▼ -->
     <section id="admin-screen" class="screen">
       <header class="top-bar">
@@ -316,16 +5,17 @@
         <button id="logout-admin" class="btn secondary small">ログアウト</button>
       </header>
 
+      <!-- アンケート入力 -->
       <div class="card">
         <h3>アンケート結果の入力</h3>
         <form id="survey-form">
-          <label>年齢</label>
+          <label for="age">年齢</label>
           <input id="age" type="number" min="0" max="120" required />
 
-          <label>財布の中身（円）</label>
+          <label for="wallet">財布の中身（円）</label>
           <input id="wallet" type="number" min="0" step="100" required />
 
-          <label>自由な意見</label>
+          <label for="free-comment">自由な意見</label>
           <textarea id="free-comment" rows="3"></textarea>
 
           <button class="btn primary wide" type="submit">追加</button>
@@ -333,67 +23,58 @@
         <p id="survey-save-message" class="info-message"></p>
       </div>
 
+      <!-- アンケート集計 -->
       <div class="card">
         <h3>アンケート集計</h3>
         <div id="survey-summary"></div>
         <div id="age-chart"></div>
       </div>
 
+      <!-- アンケート一覧 -->
       <div class="card">
         <h3>アンケート一覧</h3>
         <div id="survey-list"></div>
       </div>
 
+      <!-- アンケートのリセット -->
       <div class="card">
         <h3>アンケートのリセット</h3>
         <button id="reset-survey" class="btn danger wide">全削除</button>
         <p id="survey-reset-message" class="info-message"></p>
       </div>
 
-      <!-- ▼▼▼ Bユーザー用パスワード設定（E00002 のときだけ表示） ▼▼▼ -->
-      <div class="card hidden" id="bpassword-card">
+      <!-- ★ E00002 専用：Bユーザー用ログインパスワード設定カード -->
+      <div id="bpassword-card" class="card hidden">
         <h3>Bユーザー用ログインパスワード設定</h3>
-        <p style="font-size:12px; color:#6b7280; margin-top:0; margin-bottom:12px;">
-          B から始まるコードのお客様に、それぞれ専用の4桁パスワードを設定できます。
+        <p class="note">
+          Bから始まるお客様コードごとに、4桁のパスワードを設定できます。<br>
+          例）コード「B00001」 パスワード「3432」
         </p>
 
         <form id="bpassword-form">
           <label for="b-code">コード（B00001 など）</label>
           <input
-            type="text"
             id="b-code"
-            maxlength="6"
-            autocomplete="off"
-            placeholder="B00001"
-          />
-
-          <label for="b-pass">パスワード（4桁）</label>
-          <input
             type="text"
-            id="b-pass"
-            maxlength="4"
-            inputmode="numeric"
+            maxlength="6"
+            placeholder="B00001"
             autocomplete="off"
-            placeholder="例）1234"
+            required
           />
 
-          <button type="submit" class="btn primary wide">
-            パスワードを保存
-          </button>
+          <label for="b-pass">パスワード（4桁の数字）</label>
+          <input
+            id="b-pass"
+            type="password"
+            maxlength="4"
+            placeholder="例）3432"
+            autocomplete="off"
+            required
+          />
+
+          <button type="submit" class="btn primary wide">Bユーザーのパスワードを設定</button>
         </form>
 
         <p id="bpassword-message" class="info-message"></p>
       </div>
     </section>
-
-  </div>
-
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-
-  <!-- 自作スクリプト -->
-  <script src="firebase-config.js"></script>
-  <script src="main.js"></script>
-</body>
-</html>
